--- a/OughtTaDo/app/src/main/res/layout/activity_todo.xml
+++ b/OughtTaDo/app/src/main/res/layout/activity_todo.xml
@@ -1,64 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.tara.oughttado.MainActivity"
-    android:backgroundTint="#fff">
+    android:backgroundTint="#fff"
+    android:weightSum="1">
 
-    <Button
-        android:id="@+id/add"
-        android:layout_width="114dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_weight="1"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="77sp"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
 
-        android:background="@android:color/holo_orange_light"
-        android:onClick="ClickedAdd"
-        android:text="Add"
-        android:textColor="#f24359"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:ignore="HardcodedText"
-        app:layout_constraintBottom_toTopOf="@+id/listView"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <EditText
+                android:id="@+id/editText"
+                android:layout_width="279sp"
+                android:layout_height="49sp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:hint="Task"
+                android:inputType="textCapSentences"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.513"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/add"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="HardcodedText" />
+
+            <Button
+                android:id="@+id/add"
+                android:layout_width="wrap_content"
+                android:layout_height="37dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="26dp"
+
+                android:layout_marginTop="8dp"
+                android:background="@android:color/holo_orange_light"
+                android:onClick="ClickedAdd"
+                android:text="Add"
+                android:textColor="#f24359"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="HardcodedText"
+                app:layout_constraintBottom_toBottomOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="355dp"
-        android:smoothScrollbar="true"
-        android:scrollingCache="true"
-        android:layout_height="415dp"
+        android:layout_width="match_parent"
+        android:layout_height="172sp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintHorizontal_bias="0.521"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
+        android:layout_weight="0.91"
+        android:scrollingCache="true"
+        android:smoothScrollbar="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="204dp"
-        android:layout_height="40dp"
-        android:ems="10"
-        android:inputType="textCapWords"
-        android:hint="Task"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        tools:ignore="HardcodedText"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/add"
-        android:layout_marginRight="8dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
